Added some of my social media link to my port folio

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <!--===== HOME =====-->
             <section class="home bd-grid" id="home">
                 <div class="home__data">
-                    <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">BHARZHO</span><br> Web Designer</h1>
+                    <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Abdul-Salam <br>Abdul-Basit</span><br> Web Designer</h1>
 
                     <a href="#contact" class="button">Contact</a>
                 </div>
@@ -156,27 +156,27 @@
                 <h2 class="section-title">Work</h2>
 
                 <div class="work__container bd-grid">
-                    <a href="assets/work/The hallowen landing page" class="work__img">
+                    <a href="assets/work/haloween" class="work__img">
                         <img src="assets/img/haloween2.jpg" alt="">
                         <h1 style="color: black; text-align: center;" class="but">Haloween Landing Page</h1>
                     </a>
-                    <a href="assets/work/A simple countdown timer" class="work__img">
+                    <a href="assets/work/timer" class="work__img">
                         <img src="assets/img/timer.jpg" alt="">
                         <h1 style="color: black; text-align: center;" class="but">Countdown Timer</h1>
                     </a>
-                    <a href="assets/work/A simple quiz game" class="work__img">
+                    <a href="assets/work/quiz" class="work__img">
                         <img src="assets/img/quiz.jpg" alt="">
                         <h1 style="color: black; text-align: center;" class="but">Brain Blast Quiz</h1>
                     </a>
-                    <a href="assets/work/Simple Calculator App" class="work__img">
+                    <a href="assets/work/calculator" class="work__img">
                         <img src="assets/img/calculator.png" alt="">
                         <h1 style="color: black; text-align: center;" class="but">Calculator</h1>
                     </a>
-                    <a href="assets/work/Simple Google Login Website" class="work__img">
+                    <a href="assets/work/login" class="work__img">
                         <img src="assets/img/work6.jpg" alt="">
                         <h1 style="color: black; text-align: center;" class="but">Login Authentication</h1>
                     </a>
-                    <a href="assets/work/A resturant website/" class="work__img">
+                    <a href="assets/work/resturant" class="work__img">
                         <img src="assets/img/work5.jpg" alt="">
                         <h1 style="color: black; text-align: center;" class="but">A Resturant Website</h1>
                     </a>
@@ -225,8 +225,8 @@
         <footer class="footer">
             <p class="footer__title">Abdul-Salam Abdul-Basit</p>
             <div class="footer__social">
-                <a href="#" class="footer__icon"><i class='bx bxl-facebook' ></i></a>
-                <a href="#" class="footer__icon"><i class='bx bxl-instagram' ></i></a>
+                <a href="https://web.facebook.com/profile.php?id=100080833353912" class="footer__icon"><i class='bx bxl-facebook' ></i></a>
+                <a href="https://www.instagram.com/bharzho/" class="footer__icon"><i class='bx bxl-instagram' ></i></a>
                 <a href="https://twitter.com/Abdulsa68600496" class="footer__icon"><i class='bx bxl-twitter' ></i></a>
             </div>
             <p class="footer__copy">&#169; BHARZHOcode. All rigths reserved</p>
